<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/setari" />

    </group>
    <item android:title="@string/pornire_pompa">
        <menu>
            <item
                android:id="@+id/switch_item"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/pompa_on_off"
                app:actionLayout="@layout/layout_switch" />
        </menu>
    </item>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />

        </menu>
    </item>

    <item android:title="@string/versiune">
        <menu>
            <item
                android:id="@+id/nav_version"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/versiune" />

        </menu>
    </item>

</menu>
